kubernetes/backend-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: jorjo2009/backend-service:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /app
          name: code
      volumes:
      - name: code
        hostPath:
          path:  /run/desktop/mnt/host/c/Users/georg/code/lm-with-rag/backend
