kubernetes/frontend-deployment.dev.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        release: development
    spec:
      containers:
      - name: frontend
        image: jorjo2009/frontend-service-dev:latest
        command: ["npm", "start"]
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/src/app/src
          name: src
        - mountPath: /usr/src/public
          name: public
      volumes:
      - name: src
        hostPath:
          path:  /run/desktop/mnt/host/c/Users/georg/code/lm-with-rag/web-ui/src
      - name: public
        hostPath:
          path: /run/desktop/mnt/host/c/Users/georg/code/lm-with-rag/web-ui/public
