kubernetes/rag-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag
  labels:
    app: rag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag
  template:
    metadata:
      labels:
        app: rag
    spec:
      containers:
      - name: rag-container
        image: jorjo2009/rag-service:latest
        ports:
        - containerPort: 50001
        resources:
          limits:
            memory: "4Gi"
            cpu: "0.5"
          requests:
            memory: "4Gi"
            cpu: "0.3"
