kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
    release: development
  ports:
  - port: 3000
    targetPort: 3000
    name: "http"
