kubernetes/model-service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: model
  labels:
    app: model
spec:
  ports:
  - name: grpc
    port: 50001
    targetPort: 50001
  selector:
    app: model
