kubernetes/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  labels:
    name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  #- host: kubernetes.docker.internal
  - http:
      paths:
      - pathType: Prefix
        path: "/api, /docs"
        backend:
          service:
            name: backend
            port: 
              number: 8000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 3000
